volunteer shift tab fixes, migration

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -91,7 +91,7 @@ record_list {
 form_actions {
 	display: block;
 	clear: both;
-	width: 100%;
+	width: 96%;
 	padding: 20px 10px 0px 10px;	
 }
 add_another {
